Progress migration .Bug with stack in MacOs